--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,6 @@
-.contenedor{
+.container{
 	margin: 3%;
+
 }
 
 @font-face
@@ -34,4 +35,12 @@ font-family: "Righteous-Regular";
 	background: linear-gradient( rgba(255,0,0,0), #80cbc4);
 	font-family: 'Righteous-Regular';
 
+}
+p.formula
+{
+	font-family: 'Courier New';
+	font-size: 25px;
+	text-align: center;
+	color: #004d40;
+	font-weight: bold;
 }
